# replace_all

./: .gitignore  README.md  pyproject.toml  setup.py
src/replace_all/: __init__.py  replace_all.py
test/: test_replace_all.py
