[build-system]
requires = ["setuptools >= 65.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "replace_all"
description = "efficiently replace multiple needles in a haystack"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["src"]
include = ["replace_all"]
namespaces = false